Readme & Preview updated (incl. friep)

--- a/outputs/index.html
+++ b/outputs/index.html
@@ -29,6 +29,15 @@
       </li>
       <li><a href="05-plotly.html">05-plotly</a></li>
       <li><a href="05a-plotly-with-filter.html">05a-plotly-with-filter</a></li>
+      <li>
+        <a href="06-compress-data-handover_true.html"
+          >06-compress-data-handover (Compression: on)</a
+        >
+        |
+        <a href="06-compress-data-handover_false.html"
+          >06-compress-data-handover (Compression: off)</a
+        >
+      </li>
     </ul>
   </body>
 </html>
